locust-deployment/slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    role: locust-slave
  name: locust-slave
spec:
  replicas: 8
  selector:
    matchLabels:
      role: locust-slave
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: locust-slave
    spec:
      containers:
      - image: asia-northeast1-docker.pkg.dev/phishdetectai/locust-image/locust:latest
        imagePullPolicy: Always
        name: locust-slave
        resources:
          requests:
            cpu: "1"
        volumeMounts:
          - mountPath: /locust
            name: locust-scripts
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - locust-slave
              topologyKey: "kubernetes.io/hostname"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: locust-scripts
        configMap:
          name: scripts-cm
